...
            <Text
              style={[
                styles.quickActionsTitle,
                { fontSize: isSmallPhone ? 22 : 25 },
              ]}
            >
              Quick Actions
            </Text>
          </View>

          <View
            style={[
              styles.quickRow,
...

            {/* Navigates to your StartSession screen */}
            <Pressable
              style={styles.sessionBtn}
              onPress={() => navigation.navigate('StartSession')}
            >
              <Text style={styles.sessionBtnText}>Track Now</Text>
            </Pressable>

            <Image
              source={require("../../../assets/mascot/session_mascot.png")}
              style={styles.sessionMascot}
              resizeMode="contain"
...
