appId: com.blokc.app
---
- launchApp
- assertVisible: "Create an account"
- tapOn: "Create an account"
- assertVisible: "Create Account"
- tapOn: "First Name"
- inputText: "${MAESTRO_SIGNUP_FIRST_NAME}"
- tapOn: "Last Name"
- inputText: "${MAESTRO_SIGNUP_LAST_NAME}"
- tapOn: "Email Address"
- inputText: "${MAESTRO_SIGNUP_EMAIL}"
- tapOn: "Password"
- inputText: "${MAESTRO_SIGNUP_PASSWORD}"
- tapOn: "Confirm password"
- inputText: "${MAESTRO_SIGNUP_PASSWORD}"
- tapOn: "Sign up"
- assertVisible: "Welcome to BlokC!"
- tapOn: "Continue to login"
- assertVisible: "Login"
